crates/solidity-v2/testing/snapshots/diagnostics_output/structure/library_virtual_function/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 7801] Error: Library functions cannot be "virtual".
   ╭─[input.sol:6:5]
   │
 6 │     function f1() internal virtual {}
   │     ────────────────┬────────────────  
   │                     ╰────────────────── Error occurred here.
───╯
